--- a/messaging_app/blue_deployment.yaml
+++ b/messaging_app/blue_deployment.yaml
@@ -6,16 +6,86 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      app: messaging
+      app: messaging-app
       version: blue
   template:
     metadata:
       labels:
-        app: messaging
+        app: messaging-app
         version: blue
     spec:
       containers:
-      - name: nginx
-        image: nginx:alpine
+      - name: messaging-app
+        image: messaging_app-web:latest
+        imagePullPolicy: Never
         ports:
-        - containerPort: 80
+        - containerPort: 8000
+        env:
+        - name: DEBUG
+          valueFrom:
+            configMapKeyRef:
+              name: messaging-config
+              key: DEBUG
+        - name: DB_NAME
+          valueFrom:
+            configMapKeyRef:
+              name: messaging-config
+              key: DB_NAME
+        - name: DB_USER
+          valueFrom:
+            configMapKeyRef:
+              name: messaging-config
+              key: DB_USER
+        - name: DB_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: messaging-config
+              key: DB_HOST
+        - name: DB_PORT
+          valueFrom:
+            configMapKeyRef:
+              name: messaging-config
+              key: DB_PORT
+        - name: ALLOWED_HOSTS
+          valueFrom:
+            configMapKeyRef:
+              name: messaging-config
+              key: ALLOWED_HOSTS
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: messaging-secrets
+              key: DB_PASSWORD
+        - name: SECRET_KEY
+          valueFrom:
+            secretKeyRef:
+              name: messaging-secrets
+              key: SECRET_KEY
+        startupProbe:
+          tcpSocket:
+            port: 8000
+          initialDelaySeconds: 60
+          periodSeconds: 10
+          failureThreshold: 10
+        readinessProbe:
+          tcpSocket:
+            port: 8000
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        livenessProbe:
+          tcpSocket:
+            port: 8000
+          initialDelaySeconds: 45
+          periodSeconds: 20
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: messaging-app-service
+spec:
+  selector:
+    app: messaging-app
+  ports:
+  - port: 8000
+    targetPort: 8000
+  type: ClusterIP
