--- a/messaging_app/kubeservice.yaml
+++ b/messaging_app/kubeservice.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: messaging-service
+  name: messaging-app
 spec:
   selector:
-    app: messaging
+    app: messaging-app
     version: blue
   ports:
-  - port: 80
+  - protocol: TCP
+    port: 80
     targetPort: 80
